--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -4,7 +4,6 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
   },
-
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
       "type": "platform"
@@ -13,10 +12,10 @@
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
-
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
-    "Microsoft.Extensions.Logging.Console": "1.0.0"
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.1"
   },
 
   "tools": {
