--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -8,6 +8,7 @@
       "version": "1.0.1",
       "type": "platform"
     },
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
     "Microsoft.EntityFrameworkCore": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
@@ -18,7 +19,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
-    "System.Threading.Tasks.Dataflow": "4.6.0"
+    "System.Threading.Tasks.Dataflow": "4.6.0",
+    "Microsoft.AspNetCore.Identity": "1.0.0"
   },
 
   "tools": {
