--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -22,10 +22,8 @@
     "System.Threading.Tasks.Dataflow": "4.6.0",
     "Microsoft.AspNetCore.Identity": "1.0.0",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Mvc.TagHelpers": "1.0.1"
-    
-
-   
+    "Microsoft.AspNetCore.Mvc.TagHelpers": "1.0.1",
+    "Hangfire.Core": "1.6.5"
   },
 
   "tools": {
