--- a/src/MessageBoard/appsettings.json
+++ b/src/MessageBoard/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MessageBoard;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MessageBoard;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HangfireDb": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
