--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -23,7 +23,9 @@
     "Microsoft.AspNetCore.Identity": "1.0.0",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.0.1",
-    "Hangfire.Core": "1.6.5"
+    "Hangfire.Core": "1.6.5",
+    "Hangfire": "1.6.5",
+    "Hangfire.SqlServer": "1.6.5"
   },
 
   "tools": {
