--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -23,9 +23,12 @@
     "Microsoft.AspNetCore.Identity": "1.0.0",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.0.1",
+    "RestSharp.NetCore": "105.2.4-rc4-24214-01",
+    "Newtonsoft.Json": "9.0.1",
     "Hangfire.Core": "1.6.5",
     "Hangfire": "1.6.5",
-    "Hangfire.SqlServer": "1.6.5" },
+    "Hangfire.SqlServer": "1.6.5"
+  },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
