--- a/src/MessageBoard/project.json
+++ b/src/MessageBoard/project.json
@@ -47,7 +47,9 @@
     "netcoreapp1.0": {
       "imports": [
         "dotnet5.6",
-        "portable-net45+win8"
+        "portable-net45+win8",
+        "dnx451",
+        "dnxcore50"
       ]
     }
   },
